WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52288
[Qt] plugins/no-mime-with-valid-extension.html fails
https://bugs.webkit.org/show_bug.cgi?id=52288
Summary
[Qt] plugins/no-mime-with-valid-extension.html fails
Csaba Osztrogonác
Reported
2011-01-12 03:26:05 PST
plugins/no-mime-with-valid-extension.html introduced in
http://trac.webkit.org/changeset/75567
and fails: --- /home/webkitbuildbot/slaves/release32bit/buildslave/qt-linux-release/build/layout-test-results/plugins/no-mime-with-valid-extension-expected.txt 2011-01-12 02:49:48.867776103 -0800 +++ /home/webkitbuildbot/slaves/release32bit/buildslave/qt-linux-release/build/layout-test-results/plugins/no-mime-with-valid-extension-actual.txt 2011-01-12 02:49:48.867776103 -0800 @@ -1,4 +1,3 @@ -CONSOLE MESSAGE: line 0: PLUGIN: src: resources/test.testnetscape This test checks that
bug 50568
is fixed. It runs logSrc test as found in the test plugin which prints the src attribute to stdout. If the bug is present, the logSrc attrbitute that triggers the test will be lost and nothing will be displayed on screen. Upon success, this test should display the src attribute.
Attachments
Patch
(3.51 KB, patch)
2011-01-15 03:44 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2011-01-12 03:29:43 PST
Added to the Skipped list:
http://trac.webkit.org/changeset/75598
Robert Hogan
Comment 2
2011-01-15 03:44:57 PST
Created
attachment 79061
[details]
Patch
WebKit Commit Bot
Comment 3
2011-01-15 06:52:17 PST
Comment on
attachment 79061
[details]
Patch Clearing flags on attachment: 79061 Committed
r75878
: <
http://trac.webkit.org/changeset/75878
>
WebKit Commit Bot
Comment 4
2011-01-15 06:52:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug