2011-01-15  Robert Hogan  <robert@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] plugins/no-mime-with-valid-extension.html fails

        Check extension of resource against installed
        plugins when determining mime-type.

        https://bugs.webkit.org/show_bug.cgi?id=52288
        https://bugs.webkit.org/show_bug.cgi?id=50657
        * platform/qt/Skipped:
2011-01-15  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] plugins/no-mime-with-valid-extension.html fails
        Check extension of resource against installed
        plugins when determining mime-type.

        https://bugs.webkit.org/show_bug.cgi?id=52288
        https://bugs.webkit.org/show_bug.cgi?id=50657

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::objectContentType):

Canonical link: https://commits.webkit.org/66133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75878 268f45cc-cd09-0410-ab3c-d52691b4dbfc